# seb_pytorch

./: 01_perceptorn.ipynb  02_2_exercise_perceptron-matmul.ipynb  02_torch_perceptron.ipynb  03_2_simple_logistics_regression.ipynb  03_auto_diff.ipynb  03_exercise_1_banknotes.ipynb  04_3_1_multilayer perceptron.ipynb  04_3_3_MLP_MNIST.ipynb  04_4_dataloader_basic_instructions.ipynb  04_5_dataloader_mnist.py  04_5_github_loader.ipynb  04_multiclass.ipynb  05_1_MLP_MNIST.ipynb  05_7_2_use_ckpt_model.ipynb  05_7_loading_model.ipynb  06_2_Learning Rate Plateau.ipynb  06_2_Learning Rate Schedulers.ipynb  06_2_Learning Rate Step.ipynb  06_2_Learning Rate_Cosine.ipynb  06_E1_Learning Rate_warmup.ipynb  07_04_1 MLP VS CNN Baseline.ipynb  07_04_2 CNN Cifar10.ipynb  07_04_2 CNN ResNet18 finetuning.ipynb  07_2_0_Base CNN.ipynb  07_7_2_Self-Supervised-Learning-Unlabelled-data.ipynb  07_7_Self-Supervised-Learning-Unlabelled-data.ipynb  08_0_download_data.ipynb  08_2_training_text_classifier_baseline.ipynb  08_3_Embedding.ipynb  08_4_Coding Attention mechanism.ipynb  MyLightningModel_v0.py  MyLightningModel_v1.py  MyLightningModel_v2.py  MyLightningModel_v3.py  README.md  __tfidf_sklearn.ipynb  basic_func_plots.ipynb  lightning_MLP_MNIST.py  mlp_cli.py  mlp_cli2.py  (+5 more)
assets/: linearly_separable_data.csv
